--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -2,3 +2,53 @@
     border-radius: 5%;
     background-color: aliceblue;
 }
+
+.swiper-wrapper {
+    transition-delay: 0.5s;
+}
+
+.slide-img {
+    position: relative;
+    /* top: -10px; */
+    /* background-repeat: no-repeat !important; */
+    /* background-size: contain; */
+    width: 100%;
+    height: 100%;
+}
+
+/* Header */
+.slide-number {
+    position: relative;
+    overflow: hidden;
+
+    /* top: -120px;
+    left: 30%;
+    width: 200px;
+    height: 120px; */
+    /* text-align: center; */
+    z-index: 10;
+    /* white-space: pre; */
+    color: black;
+}
+
+/* Description */
+.slide-detail {
+    /* position: relative; */
+    z-index: 10;
+    overflow: hidden;
+    font-size: 14px;
+}
+
+/* Github repo */
+.slide-detail-facts {
+    position: absolute;
+    /* top: 75%; */
+    /* left: 30%; */
+    z-index: 10;
+    /* width: 50%; */
+    /* height: 500px; */
+    overflow: hidden;
+    color: black;
+}
+
+  
