--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800;900&display=swap');
+
 .profile {
-    height: 85%;
-    width: 85%;
+    height: 75%;
+    width: 75%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -50,4 +52,18 @@
 
 .text {
     font-size: 13px;
+}
+
+.name {
+    display: block;
+    font-size: 60px;
+    margin-top: 0px;
+    margin-bottom: 6px;
+
+    /* margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px; */
+    /* font-weight: 800; */
+    font-family: Raleway, sans-serif;
 }
