--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -28,12 +28,19 @@
     font-size: 14px;
 }
 
-/* Github repo */
-.slide-detail-facts {
-    position: absolute;
+/* Tech Title */
+.slide-detail-tech {
+    position: relative;
     z-index: 10;
     overflow: hidden;
-    color: black;
+}
+
+
+/* Tech Icons */
+.slide-detail-facts {
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
 }
 
 .bio {
