--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,6 +1,9 @@
 .container {
-    border-radius: 5%;
-    background-color: aliceblue;
+    border-radius: 2.5%;
+    background-color: #65bdcc;
+    border: solid 5px white;
+    /* ORIGINAL e4fbff */
+    /* 65bdcc */
 }
 
 .swiper-wrapper {
@@ -26,6 +29,7 @@
     z-index: 10;
     overflow: hidden;
     font-size: 14px;
+    margin-left: 10px;
 }
 
 /* Tech Title */
@@ -33,6 +37,7 @@
     position: relative;
     z-index: 10;
     overflow: hidden;
+    margin-left: 10px;
 }
 
 
@@ -41,6 +46,7 @@
     position: relative;
     z-index: 10;
     overflow: hidden;
+    margin-left: 10px;
 }
 
 .bio {
@@ -56,4 +62,21 @@
     width:2%;
     height:auto;
     display:inline-block;
+}
+
+h1 {
+    color: white;
+}
+
+.slide-detail-tech {
+    padding-bottom: 3%;
+}
+
+.MuiButton-outlinedPrimary {
+    color: white !important;
+    border: 1px solid rgb(255 255 255 / 50%) !important;
+}
+
+:root {
+    --swiper-theme-color: #fff !important;
 }
