--- a/src/page/Homepage.css
+++ b/src/page/Homepage.css
@@ -2,9 +2,12 @@
     padding-bottom: 100px;
 }
 
-.topSpace {
-    padding-bottom: 150px;
-}
+/* a {
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
+} */
 
 body {
     /* background-color: #a0dbe6; */
@@ -13,7 +16,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
-    padding-top: 200px
+    /* padding-top: 100px */
 }
 
 .particlesDiv {
