--- a/src/components/About.css
+++ b/src/components/About.css
@@ -95,6 +95,7 @@ h3 {
 @media (min-width: 375px) { .social  {padding-top: 10%;}}
 @media (min-width: 375px) { .contactBox  {padding-top: 0%; padding-bottom: 5%;}}
 @media (min-width: 375px) { .iconText  {font-size: 10px;}}
+@media (min-width: 375px) { .iconSkill  {width: 15px; height: 15px;}}
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { .profile  {width: 55%; height: 65%;}}
@@ -102,6 +103,7 @@ h3 {
 @media (min-width: 576px) { .social  {padding-top: 19%;}}
 @media (min-width: 576px) { .contactBox  {padding-top: 10%; padding-bottom: 0%;}}
 @media (min-width: 576px) { .iconText  {font-size: 13px;}}
+@media (min-width: 375px) { .iconSkill  {width: 26px; height: 26px;}}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { .profile  {width: 65%; height: 65%;}}
@@ -109,6 +111,7 @@ h3 {
 @media (min-width: 768px) { .social  {padding-top: 20%;}}
 @media (min-width: 768px) { .contactBox  {padding-top: 10%; padding-bottom: 0%;}}
 @media (min-width: 768px) { .iconText  {font-size: 13px;}}
+@media (min-width: 375px) { .iconSkill  {width: 26px; height: 26px;}}
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { .profile  {width: 70%; height: 70%;}}
@@ -116,6 +119,7 @@ h3 {
 @media (min-width: 992px) { .social  {padding-top: 10%;}}
 @media (min-width: 992px) { .contactBox  {padding-top: 10%; padding-bottom: 0%;}}
 @media (min-width: 992px) { .iconText  {font-size: 13px;}}
+@media (min-width: 375px) { .iconSkill  {width: 26px; height: 26px;}}
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { .profile  {width: 70%; height: 70%;}} 
@@ -123,4 +127,5 @@ h3 {
 @media (min-width: 1200px) { .social  {padding-top: 14%;}}
 @media (min-width: 1200px) { .contactBox  {padding-top: 5%; padding-bottom: 0%;}}
 @media (min-width: 1200px) { .iconText  {font-size: 13px;}}
+@media (min-width: 375px) { .iconSkill  {width: 26px; height: 26px;}}
 
