--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -87,6 +87,7 @@ h1 {
 
 .techImg {
     margin-bottom: -1%;
+    padding-right: 2px;
 }
 
 .descriptionText {
@@ -96,27 +97,27 @@ h1 {
 
 /* MEDIA QUERIES */
 /* Extra small devices (Tested with Iphone X) */
-@media (min-width: 375px) { .slide-number, .slide-detail-tech, .slide-detail-facts {text-align: center;}}
+@media (min-width: 375px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: center;}}
 @media (min-width: 375px) { .slide-detail-tech {padding-bottom: 0%;}} 
 @media (min-width: 375px) { .slide-detail {padding-top: 0%;}} 
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { .slide-number, .slide-detail-tech, .slide-detail-facts {text-align: left;}}
+@media (min-width: 576px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
 @media (min-width: 576px) { .slide-detail-tech {padding-bottom: 0%;}} 
 @media (min-width: 576px) { .slide-detail {padding-top: 0%;}} 
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { .slide-number, .slide-detail-tech, .slide-detail-facts {text-align: left;}}
+@media (min-width: 768px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
 @media (min-width: 768px) { .slide-detail-tech {padding-bottom: 0%;}} 
 @media (min-width: 768px) { .slide-detail {padding-top: 0%;}} 
 
 /* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { .slide-number, .slide-detail-tech, .slide-detail-facts {text-align: left;}}
+@media (min-width: 992px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
 @media (min-width: 992px) { .slide-detail-tech {padding-bottom: 0%;}} 
 @media (min-width: 992px) { .slide-detail {padding-top: 0%;}} 
 
 /* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { .slide-number, .slide-detail-tech, .slide-detail-facts {text-align: left;}} 
+@media (min-width: 1200px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}} 
 @media (min-width: 1200px) { .slide-detail-tech {padding-bottom: 3%;}} 
 @media (min-width: 1200px) { .slide-detail {padding-top: 5%;}} 
 
