--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
-.container {
-    border-radius: 2.5%;
-    background-color: #65bdcc;
-    border: solid 5px white;
-    /* ORIGINAL e4fbff */
-    /* 65bdcc */
-}
-
 .swiper-wrapper {
     transition-delay: 0.5s;
 }
@@ -95,6 +87,14 @@ h1 {
     font-family: 'Nunito', sans-serif;
 }
 
+.container {
+    border-radius: 25px;
+    background-color: #65bdcc;
+    border: solid 5px white;
+    /* ORIGINAL e4fbff */
+    /* 65bdcc */
+}
+
 /* MEDIA QUERIES */
 /* Extra small devices (Tested with Iphone X) */
 @media (min-width: 375px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: center;}}
@@ -114,12 +114,13 @@ h1 {
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
 @media (min-width: 992px) { .slide-detail-tech {padding-bottom: 0%;}} 
-@media (min-width: 992px) { .slide-detail {padding-top: 0%;}} 
+@media (min-width: 992px) { .slide-detail {padding-top: 25px;}} 
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}} 
 @media (min-width: 1200px) { .slide-detail-tech {padding-bottom: 3%;}} 
 @media (min-width: 1200px) { .slide-detail {padding-top: 5%;}} 
+
 
 
 
