--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,12 +10,12 @@
 .MuiTab-textColorPrimary.Mui-selected {
 
     /* color: #a0dbe6 !important; */
-    color: #A4D1EB !important;
+    color: #BADFFF !important;
 
 }
 
 .PrivateTabIndicator-colorPrimary-2 {
-    background-color: #A4D1EB !important;
+    background-color: #BADFFF !important;
 }
 
 .MuiTabs-flexContainer {
