--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -26,21 +26,13 @@
     margin-left: 10px;
 }
 
-/* Tech Title */
-.slide-detail-tech {
-    position: relative;
-    z-index: 10;
-    overflow: hidden;
-    margin-left: 10px;
-}
-
-
 /* Tech Icons */
 .slide-detail-facts {
     padding-top: 5%;
     position: relative;
     overflow: hidden;
     margin-left: 10px;
+    text-align: center;
 }
 
 .bio {
@@ -98,29 +90,24 @@ h1 {
 
 /* MEDIA QUERIES */
 /* Extra small devices (Tested with Iphone X) */
-@media (min-width: 360px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: center;}}
-@media (min-width: 360px) { .slide-detail-tech {padding-bottom: 0%;}} 
-@media (min-width: 360px) { .slide-detail {padding-top: 0%;}} 
+@media (min-width: 360px) { .slide-number, .slide-detail-facts, .descriptionText {text-align: center;}}
+@media (min-width: 360px) { .descriptionText {padding-top: 0%; }} 
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
-@media (min-width: 576px) { .slide-detail-tech {padding-bottom: 0%;}} 
-@media (min-width: 576px) { .slide-detail {padding-top: 0%;}} 
+@media (min-width: 576px) { .slide-number, .slide-detail-facts, .descriptionText {text-align: left;}}
+@media (min-width: 576px) { .descriptionText {padding-top: 0%; }} 
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
-@media (min-width: 768px) { .slide-detail-tech {padding-bottom: 0%;}} 
-@media (min-width: 768px) { .slide-detail {padding-top: 0%;}} 
+@media (min-width: 768px) { .slide-number, .slide-detail-facts, .descriptionText {text-align: left;}}
+@media (min-width: 768px) { .descriptionText {padding-top: 2%; }} 
 
 /* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}}
-@media (min-width: 992px) { .slide-detail-tech {padding-bottom: 0%;}} 
-@media (min-width: 992px) { .slide-detail {padding-top: 25px;}} 
+@media (min-width: 992px) { .slide-number, .slide-detail-facts, .descriptionText {text-align: left;}}
+@media (min-width: 992px) { .descriptionText {padding-top: 2%; }} 
 
 /* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { .slide-number, .slide-detail-tech, .slide-detail-facts, .descriptionText {text-align: left;}} 
-@media (min-width: 1200px) { .slide-detail-tech {padding-bottom: 3%;}} 
-@media (min-width: 1200px) { .slide-detail {padding-top: 5%;}} 
+@media (min-width: 1200px) { .slide-number, .slide-detail-facts, .descriptionText {text-align: left;}} 
+@media (min-width: 1200px) { .descriptionText {padding-top: 2%; }} 
 
 
 
