--- a/src/components/About.css
+++ b/src/components/About.css
@@ -27,11 +27,6 @@
     font-size: 30px;
 }
 
-.skillTitle {
-    border-top: solid 5px white;
-    padding-bottom: 2%;
-}
-
 .skills {
     text-align: center;
     display: flex;
@@ -77,7 +72,6 @@ h3 {
 
 .iconText {
     font-size: 13px;
-    /* margin-top: 1px; */
 }
 
 .icon {
@@ -91,36 +85,8 @@ h3 {
 .text {
     font-family: 'Nunito', sans-serif;
 }
-
-@media (max-width: 360px) {
-    .switch {
-      display: -webkit-box !important;
-      display: -moz-box !important;
-      display: -ms-flexbox !important;
-      display: -webkit-flex !important;
-      display: flex !important;
-      -webkit-box-orient: vertical !important;
-      -moz-box-orient: vertical !important;
-      -webkit-flex-direction: column !important;
-      -ms-flex-direction: column !important;
-      flex-direction: column !important;
-    }
-
-    .switch .first_div {
-        -webkit-box-ordinal-group: 2 !important;
-        -moz-box-ordinal-group: 2 !important;
-        -ms-flex-order: 2 !important;
-        -webkit-order: 2 !important;
-        order: 2 !important;
-      }
-    
-      .switch .second_div {
-        -webkit-box-ordinal-group: 1 !important;
-        -moz-box-ordinal-group: 1 !important;
-        -ms-flex-order: 1 !important;
-        -webkit-order: 1 !important;
-        order: 1 !important;
-      }
+.skillTitle {
+    padding-bottom: 2%;
 }
 
 /* MEDIA QUERIES */
@@ -132,6 +98,7 @@ h3 {
 @media (min-width: 360px) { .iconText  {font-size: 10px;}}
 @media (min-width: 360px) { .iconSkill  {width: auto; height: 30%;}}
 @media (min-width: 360px) { .bioText  { margin-top: 0px;}}
+@media (min-width: 360px) { .skillTitle  { border-top: solid 1px white; }}
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { .profile  {width: 90%; height: 85%; margin-top: 50px;}}
@@ -141,6 +108,7 @@ h3 {
 @media (min-width: 576px) { .iconText  {font-size: 13px;}}
 @media (min-width: 576px) { .iconSkill  {width: auto; height: auto;}}
 @media (min-width: 576px) { .bioText  { margin-top: -220px;}}
+@media (min-width: 576px) { .skillTitle  { border-top: solid 3px white; }}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { .profile  {width: 70%; height: 85%; margin-top: 50px;}}
@@ -150,6 +118,7 @@ h3 {
 @media (min-width: 768px) { .iconText  {font-size: 13px;}}
 @media (min-width: 768px) { .iconSkill  {width: auto; height: auto;}}
 @media (min-width: 768px) { .bioText  { margin-top: -170px;}}
+@media (min-width: 768px) { .skillTitle  { border-top: solid 3px white; }}
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { .profile  {width: 70%; height: 85%; margin-top: 50px;}}
@@ -159,6 +128,7 @@ h3 {
 @media (min-width: 992px) { .iconText  {font-size: 13px;}}
 @media (min-width: 992px) { .iconSkill  {width: auto; height: auto;}}
 @media (min-width: 992px) { .bioText  { margin-top: -210px;}}
+@media (min-width: 992px) { .skillTitle  { border-top: solid 3px white; }}
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { .profile  {width: 70%; height: 90%; margin-top: 20px;}}
@@ -168,5 +138,7 @@ h3 {
 @media (min-width: 1200px) { .iconText  {font-size: 13px;}}
 @media (min-width: 1200px) { .iconSkill  {width: auto; height: auto;}}
 @media (min-width: 1200px) { .bioText  { margin-top: -210px;}}
+@media (min-width: 1200px) { .skillTitle  { border-top: solid 3px white; }}
+
 
 
