--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,4 @@
 .MuiPaper-root {
-    /* background-color: #65bdcc !important; */
     background-color: #71afed !important;
 }
 
@@ -8,25 +7,49 @@
 }
 
 .MuiTab-textColorPrimary.Mui-selected {
-
-    /* color: #a0dbe6 !important; */
     color: #BADFFF !important;
-
 }
 
 .PrivateTabIndicator-colorPrimary-2 {
     background-color: #BADFFF !important;
 }
 
-.MuiTabs-flexContainer {
-    padding-bottom: 20px !important;
-}
-
 .MuiTab-wrapper {
-    padding-top: 20px;
+    /* padding-top: 20px; */
     width: 100%;
     display: inline-flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 }
+
+/* .test {
+    display: inline !important;
+} */
+
+/* MEDIA QUERIES */
+/* Extra small devices (Tested with Iphone X) */
+@media (min-width: 360px) { .MuiTabs-flexContainer {padding-bottom: 0;}}
+@media (min-width: 360px) { .MuiTab-wrapper {padding-top: 0;}}
+@media (min-width: 360px) { .navImage {width: 50px; height: 50px; position: absolute; bottom: 1px; left: 10px;}}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { .MuiTabs-flexContainer {padding-bottom: 20px !important;}}
+@media (min-width: 576px) { .MuiTabs-flexContainer {padding-top: 20px;}}
+@media (min-width: 576px) { .navImage {width: 80px; height: 80px; position: absolute; bottom: 1px; left: 10px;}}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { .MuiTabs-flexContainer {padding-bottom: 20px !important;}}
+@media (min-width: 768px) { .navImage {width: 100%; height: 100%;}}
+@media (min-width: 768px) { .navImage {width: 80px; height: 80px; position: absolute; bottom: 1px; left: 10px;}}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { .MuiTabs-flexContainer {padding-bottom: 20px !important;}}
+@media (min-width: 992px) { .MuiTab-wrapper {padding-top: 20px;}}
+@media (min-width: 992px) { .navImage {width: 100px; height: 100px; position: absolute; bottom: 1px; left: 10px;}}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { .MuiTabs-flexContainer {padding-bottom: 20px !important;}} 
+@media (min-width: 1200px) { .MuiTab-wrapper {padding-top: 20px;}} 
+@media (min-width: 1200px) { .navImage {width: 100px; height: 100px; position: absolute; bottom: 1px; left: 10px;}} 
+
