--- a/src/page/Homepage.css
+++ b/src/page/Homepage.css
@@ -15,6 +15,10 @@ p {
     color: white;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 /* MEDIA QUERIES */
 /* Extra small devices (Tested with Iphone X) */
 @media (min-width: 375px) { .particles {width: 100vw !important; height: 410vh !important;}}
