--- a/src/components/About.css
+++ b/src/components/About.css
@@ -86,7 +86,12 @@ h3 {
     font-family: 'Nunito', sans-serif;
 }
 .skillTitle {
-    padding-bottom: 2%;
+    padding-bottom: 2px;
+}
+
+.techSkills {
+    text-align: center;
+    padding-bottom: 20px;
 }
 
 /* MEDIA QUERIES */
