--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -21,7 +21,7 @@
 } */
 
 .descriptionText {
-    font-size: 16px;
+    font-size: 20px;
     font-family: 'Nunito', sans-serif;
 }
 
@@ -51,13 +51,52 @@
 }
 
 .projectImage {
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
-.titlePadding {
-    padding-bottom: 10px;
+h4 {
+	display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    color: white;
 }
 
 .descriptionDiv {
-    padding-bottom: 55px;
+    margin-top: 50px !important;
+    padding-bottom: 40px;
 }
+
+
+/* MEDIA QUERIES */
+/* Extra small devices (Tested with Iphone X) */
+@media (min-width: 360px) { h4, .descriptionDiv, .icons {text-align: center;}}
+@media (min-width: 360px) { .descriptionDiv {margin-top: 0px !important; padding-bottom: 0px;}}
+@media (min-width: 360px) { h4 {margin-bottom: 0.3em;}}
+@media (min-width: 360px) { .descriptionText {font-size: 16px;}}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { .descriptionDiv {text-align: left;}}
+@media (min-width: 576px) { .descriptionDiv {margin-top: 50px !important; padding-bottom: 40px;}}
+@media (min-width: 576px) { h4 {margin-bottom: 0;}}
+@media (min-width: 576px) { .descriptionText {font-size: 20px;}}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { h4, .descriptionDiv, .icons {text-align: left;}}
+@media (min-width: 768px) { .descriptionDiv {margin-top: 50px !important; padding-bottom: 40px;}}
+@media (min-width: 768px) { h4 {margin-bottom: 0;}}
+@media (min-width: 768px) { .descriptionText {font-size: 20px;}}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { h4, .descriptionDiv, .icons {text-align: left;}}
+@media (min-width: 992px) { .descriptionDiv {margin-top: 50px !important; padding-bottom: 40px;}}
+@media (min-width: 992px) { h4 {margin-bottom: 0;}}
+@media (min-width: 992px) { .descriptionText {font-size: 20px;}}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { h4, .descriptionDiv, .icons {text-align: left;}} 
+@media (min-width: 1200px) { .descriptionDiv {margin-top: 50px !important; padding-bottom: 40px;}} 
+@media (min-width: 1200px) { h4 {margin-bottom: 0;}} 
+@media (min-width: 1200px) { .descriptionText {font-size: 20px;}} 
