--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -26,7 +26,7 @@
         text-align: center;
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         justify-content: space-evenly;
     }
     
