assets cleanup, static images added and hover effect for buttons

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -61,6 +61,10 @@
     .icon {
         font-size: 26px;
     }
+
+    .iconSkill {
+        cursor: pointer;
+    }
     
     .socialText {
         margin-top: 1px;
